fixed bug where mouseclicks would register the div behind the buttons

--- a/styles.css
+++ b/styles.css
@@ -92,3 +92,13 @@ div{
 .clearbtn:hover{
     font-weight: bold;
 }
+
+.btn p{
+    display: flex;
+    height: 100%;
+    flex-grow: 1;
+    justify-content: center;
+    align-items: center;
+}
+
+
